--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h3>Hobbies</h3>
+  <h3>My Hobbies</h3>
   <ul>
     <li><a href="https://en.wikipedia.org/wiki/Yakshagana">Yakshagana</a></li>
     <li>Sketching</li>
