--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <li>Web Development</li>
   </ul>
   <hr>
-  <a href="hobbies.html">My hobbies</a><br>
+  <a href="Hobbies.html">My Hobbies</a><br>
   <a href="input.html">Input's</a><br>
   <a href="Personaldetails.html">Contact me</a>
   <hr>
